# FormalHW5

./: .clang-format  Source.hpp  Tests.cpp
CYK/: CMakeLists.txt  Test.cpp  source.hpp
Min/: CMakeLists.txt  README.md  Source.hpp  Tests.cpp
